--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "i18next": "^23.10.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
