--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "i18next": "^23.10.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
